# nexusobserve

./: .gitignore  README.md  nexus_dev.db  run_demo.sh  verify_e2e.py  verify_replay.py
.github/workflows/: ci.yml
collector/: README.md  pyproject.toml
collector/nexus_collector/: __init__.py  main.py  replay.py
contracts/: __init__.py  schema.py
dashboard-lite/: index.html
dashboard-lite/src/: App.jsx  api.js
dashboard-lite/src/components/: DecisionGraph.jsx  DiffPanel.jsx  SummaryBar.jsx
demo/: refund_agent.py
docs/: ARCHITECTURE.md  related-work.md
examples/refund_agent/: README.md  refund_agent.py
nexusobserve/: README.md  pyproject.toml
nexusobserve/src/nexusobserve/: __init__.py  __main__.py  local_store.py  schema.py  tracer.py
tests/: conftest.py  test_collector.py  test_local_mode.py  test_schema.py
