[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-collector"
version = "0.1.0"
description = "Nexus Collector — lightweight FastAPI + SQLite store for agent decision records."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "observability", "decision"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/nexusobserve/nexusobserve"

[tool.setuptools]
packages = ["nexus_collector"]

[tool.setuptools.package-dir]
nexus_collector = "nexus_collector"
