[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusobserve"
version = "0.1.0"
description = "Instrument AI agents to capture decisions: chosen option + discarded alternatives + opportunity cost."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "agents", "observability", "decision", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/nexusobserve/nexusobserve"
Issues   = "https://github.com/nexusobserve/nexusobserve/issues"

[tool.setuptools.packages.find]
where = ["src"]
